--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/boshek/libminer
+URL: https://github.com/boshek/libminer, https://boshek.github.io/libminer/
 BugReports: https://github.com/boshek/libminer/issues
 Suggests: 
     testthat (>= 3.0.0)
