--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,11 @@ RoxygenNote: 7.3.2
 URL: https://github.com/boshek/libminer, https://boshek.github.io/libminer/
 BugReports: https://github.com/boshek/libminer/issues
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
     fs,
     purrr
+VignetteBuilder: knitr
